# rhombus-ai-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  lint.yml  main.yml
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml
backend/app/: settings.py
backend/data_processing/: admin.py  llm_service.py  models.py  tests.py  urls.py  utils.py  views.py
backend/data_processing/migrations/: 0001_initial.py  0002_uploadedfile_headers_uploadedfile_row_count.py  0003_llminstructionlog.py  0004_auto_20250913_0355.py  0005_remove_llminstructionlog_data_proces_file_id_c5d0d1_idx_and_more.py
backend/db_data/: README.md
backend/rhombus_ai/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  jest.config.cjs  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/: DataPreview.tsx  FileInfoSummary.tsx  FileUpload.tsx  ModificationInstructionPanel.tsx  Navbar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: env.ts
frontend/src/utils/: apiUtils.ts  dateUtils.ts  fileUtils.ts  modificationUtils.ts
frontend/src/utils/__tests__/: apiUtils.test.ts  dateUtils.test.ts  fileUtils.test.ts  modificationUtils.test.ts
